--- a/index.mdx
+++ b/index.mdx
@@ -41,7 +41,7 @@ Start with the quickstart, then scan the playbooks below—every section is buil
 
 ## Start with the essentials
 
-See how Humyn works, connect data, and unlock value in a hurry.
+See how Humyn works, connect data, and unlock insight in a hurry.
 
 <Columns cols={2}>
   <Card
@@ -57,13 +57,6 @@ See how Humyn works, connect data, and unlock value in a hurry.
     href="/introduction/quickstart"
   >
     Stand up your workspace, connect sources, and surface first insights in minutes.
-  </Card>
-  <Card
-    title="Account & Billing"
-    icon="credit-card"
-    href="/introduction/account-and-billing"
-  >
-    Compare plans, usage allowances, and every billing workflow in one place.
   </Card>
 </Columns>
 
