--- a/introduction/quickstart.mdx
+++ b/introduction/quickstart.mdx
@@ -84,6 +84,6 @@ Record a Loom or capture a dashboard screenshot of your first win and pin it to 
 
 ## Next Steps
 
-- Align ownership, billing, and governance in [Account & Billing](./account-and-billing).  
+- Document ownership, governance, and rituals in your internal workspace wiki.  
 - Explore each intelligence surface starting with the [Dashboard](../core-features/dashboard).  
 - Share learnings with the team in the Humyn [Discord community](https://discord.gg/bycbt28zpk) for fast feedback.
