--- a/home/roadmap.mdx
+++ b/home/roadmap.mdx
@@ -34,7 +34,7 @@ Timelines represent earliest release targets. We adjust as customer signal, data
       }}
     />
     <h3 style={{ marginBottom: "0.35rem" }}>Q4 2025 · High priority</h3>
-    <p style={{ color: "rgba(15, 23, 42, 0.72)", marginBottom: "0.85rem" }}>
+    <p style={{ marginBottom: "0.85rem" }}>
       We are closing out 2025 by tightening exports and giving researchers more control before data lands in Humyn.
     </p>
     <ul>
@@ -57,7 +57,7 @@ Timelines represent earliest release targets. We adjust as customer signal, data
       }}
     />
     <h3 style={{ marginBottom: "0.35rem" }}>Early 2026 · Discovery</h3>
-    <p style={{ color: "rgba(15, 23, 42, 0.72)", marginBottom: "0.85rem" }}>
+    <p style={{ marginBottom: "0.85rem" }}>
       We are validating which channels and workflows deserve deeper automation next.
     </p>
     <ul>
@@ -78,7 +78,7 @@ Timelines represent earliest release targets. We adjust as customer signal, data
       }}
     />
     <h3 style={{ marginBottom: "0.35rem" }}>Mid 2026 · Exploratory</h3>
-    <p style={{ color: "rgba(15, 23, 42, 0.72)", marginBottom: "0.85rem" }}>
+    <p style={{ marginBottom: "0.85rem" }}>
       These ideas need sharper signal from customers before we commit resources.
     </p>
     <ul>
