--- a/workflows/product-managers.mdx
+++ b/workflows/product-managers.mdx
@@ -5,6 +5,18 @@ description: "Translate community signal into confident roadmap bets and stakeho
 
 # Product Manager Workflow
 
+<iframe
+  width="100%"
+  height="360"
+  src="https://www.youtube.com/embed/3t-DO7c10co?si=Z0EXJm_cx18GmZVs"
+  title="Product Manager workflow with Humyn"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+  style={{ margin: "1.75rem 0", borderRadius: "1rem", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.18)" }}
+/>
+
 Humyn gives PMs a continuous feed of customer voice without running a fresh survey every week. Use this playbook to move from fuzzy feedback to prioritized roadmap moves.
 
 ## 1. Align on the question
