--- a/workflows/generic-use-case.mdx
+++ b/workflows/generic-use-case.mdx
@@ -5,6 +5,18 @@ description: "End-to-end recipe for turning community chatter into actionable in
 
 # Generic Use Case
 
+<iframe
+  width="100%"
+  height="360"
+  src="https://www.youtube.com/embed/dC7AQQMEh0k?si=-mUzKJ5_ByZYwPnm"
+  title="Humyn overview workflow"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+  style={{ margin: "1.75rem 0", borderRadius: "1rem", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.18)" }}
+/>
+
 This workflow is the baseline loop we recommend for any team adopting Humyn. It balances signal intake, synthesis, and sharing so you can prove value in a single sprint.
 
 <Callout>
