Link quickstart prompts and update workflow videos

--- a/introduction/quickstart.mdx
+++ b/introduction/quickstart.mdx
@@ -61,7 +61,7 @@ Run through these five moves to go from sign-up to actionable insight in a singl
 ## Starter Prompts
 
 <Callout>
-Use these to prove immediate value—duplicate and tweak the language to match your product pillar.
+Use these to prove immediate value—duplicate and tweak the language to match your product pillar, then explore more in the <a href="../core-features/chat-with-hue">Chat with Hue</a> prompt library.
 </Callout>
 
 | Prompt | Outcome | Suggested Owner |
