--- a/workflows/analysts.mdx
+++ b/workflows/analysts.mdx
@@ -1,11 +1,23 @@
 ---
-title: "Workflow for Analysts"
+title: "Analysts and Traders"
 description: "Detect market-moving sentiment and qualitative signals ahead of the curve."
 ---
 
-# Analyst Workflow
+# Analysts and Traders
 
 Whether you cover public markets, category trends, or competitive intel, Humyn helps you separate speculation from sustained signal.
+
+<iframe
+  width="100%"
+  height="360"
+  src="https://www.youtube.com/embed/ESvZmdOJ5qk?si=HMG8SRFb_fLTHi5X"
+  title="Humyn workflow for analysts and traders"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+  style={{ margin: "1.75rem 0", borderRadius: "1rem", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.18)" }}
+/>
 
 ## 1. Define the coverage universe
 
