--- a/workflows/product-managers.mdx
+++ b/workflows/product-managers.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Workflow for Product Managers"
+title: "Product Managers, Designers & Researchers"
 description: "Translate community signal into confident roadmap bets and stakeholder-ready narratives."
 ---
 
-# Product Manager Workflow
+# Product Managers, Designers & Researchers
 
 <iframe
   width="100%"
