Tighten workflows and quickstart guidance

--- a/workflows/analysts.mdx
+++ b/workflows/analysts.mdx
@@ -40,7 +40,7 @@ Whether you cover public markets, category trends, or competitive intel, Humyn h
 
 ## 3. Surface leading indicators
 
-- Use **Explore** to sort by keywords like “sell,” “switching,” or “lagging” to flag negative inflection points.  
+- Use [Explore](/core-features/explore) to sort by keywords like “sell,” “switching,” or “lagging” to flag negative inflection points.  
 - Watch mention frequency—spikes often pre-date interest from mainstream media or analysts.  
 - Tag quotes with impact level (high/medium/low) to focus research time on the strongest signals.
 
@@ -50,7 +50,7 @@ Set up a `Watchlist` project for each sector and reuse the same keyword template
 
 ## 4. Package insights for decision makers
 
-1. Ask **Chat** for a briefing that answers “What changed in the last 7 days?”  
+1. Ask [Chat with Hue](/core-features/chat-with-hue) for a briefing that answers “What changed in the last 7 days?”  
 2. Pull top quotes into your market note or internal Slack digest—keep the original community voice intact.  
 3. Translate qualitative shifts into actions (“raise risk flag,” “add to diligence backlog,” “monitor again next week”).
 
@@ -63,3 +63,7 @@ Set up a `Watchlist` project for each sector and reuse the same keyword template
 <Tip>
 If you support multiple teams (finance, product, strategy), create separate views per stakeholder so each receives the angle that matters most.
 </Tip>
+
+<Callout>
+Pair this analysis with [Metrics](/core-features/metrics) and the [Dashboard](/core-features/dashboard) to give traders and executives the quantitative snapshot that backs your qualitative read.
+</Callout>
