--- a/workflows/generic-use-case.mdx
+++ b/workflows/generic-use-case.mdx
@@ -39,7 +39,7 @@ If you only follow one playbook, make it this one—the same structure scales to
 
 ## 3. Cluster insights quickly
 
-1. Open **Explore** once ingestion finishes.  
+1. Open [Explore](/core-features/explore) once ingestion finishes.  
 2. Filter by the newest time window to highlight fresh conversations.  
 3. Pin themes that match your mission (e.g., “pricing confusion”, “AI skepticism”).  
 4. Tag quotes with sentiment so you can pull them into decks without re-reading every thread.
@@ -50,16 +50,16 @@ Keep a running document (Notion, Coda, or Linear) with three sections: “What w
 
 ## 4. Share the story
 
-- Use **Chat** to generate a crisp summary that ties your pinned themes together.  
+- Use [Chat with Hue](/core-features/chat-with-hue) to generate a crisp summary that ties your pinned themes together.  
 - Export the highlights to your internal doc or slide template.  
 - Include 2–3 quotes in the original community voice—stakeholders trust the raw language.
 
 ## 5. Close the loop
 
-- Log any follow-up questions that surfaced during reviews.  
-- Schedule the next intake cycle and adjust keywords/URLs based on what resonated.  
-- Track the downstream impact (tickets resolved faster, demo win rate, roadmap decisions) so Humyn’s value stays visible.
+- Log follow-up questions that surfaced during reviews and feed them into the next prompt batch.  
+- Schedule the next intake cycle and adjust keywords or URLs based on what resonated.  
+- Track downstream impact (tickets resolved faster, demo win rate, roadmap decisions) so Humyn’s value stays visible.
 
 <Callout>
-Want to specialize this workflow? Pair it with the Product Manager or Analyst variants in the Workflows section to tailor deliverables without redoing setup.
+Want to specialize this workflow? Pair it with the <a href="/workflows/product-managers">Product Managers, Designers & Researchers</a> or <a href="/workflows/analysts">Analysts and Traders</a> playbooks to tailor deliverables without redoing setup.
 </Callout>
