--- a/workflows/product-managers.mdx
+++ b/workflows/product-managers.mdx
@@ -17,7 +17,7 @@ description: "Translate community signal into confident roadmap bets and stakeho
   style={{ margin: "1.75rem 0", borderRadius: "1rem", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.18)" }}
 />
 
-Humyn gives PMs a continuous feed of customer voice without running a fresh survey every week. Use this playbook to move from fuzzy feedback to prioritized roadmap moves.
+Humyn gives PMs, designers, and researchers a continuous feed of customer voice without running a fresh survey every week. Follow this guide to move from fuzzy feedback to prioritized roadmap moves your stakeholders can trust.
 
 ## 1. Align on the question
 
@@ -40,7 +40,7 @@ Humyn gives PMs a continuous feed of customer voice without running a fresh surv
 
 ## 3. Turn noise into prioritization signal
 
-- Filter Explore by persona or keyword cluster to isolate a single job-to-be-done.  
+- Filter [Explore](/core-features/explore) by persona or keyword cluster to isolate a single job-to-be-done.  
 - Use **Top Quotes** to anchor every product requirement in verbatim feedback.  
 - Track sentiment shifts week over week—if frustration grows, elevate the issue in roadmap reviews.
 
@@ -50,7 +50,7 @@ Create a saved view named `Roadmap Evidence` and pin the most important themes. 
 
 ## 4. Share the plan with stakeholders
 
-1. Draft a feature brief using Chat to synthesize “What users are saying” + “What we will build.”  
+1. Draft a feature brief using [Chat with Hue](/core-features/chat-with-hue) to synthesize “What users are saying” + “What we will build.”  
 2. Export a CSV or copy the timeline into Linear/Jira to back backlog grooming with data.  
 3. Present the highlights in product review with three elements: user quote, theme summary, proposed action.
 
@@ -63,3 +63,7 @@ Create a saved view named `Roadmap Evidence` and pin the most important themes. 
 <Tip>
 Pair this workflow with metrics dashboards (activation, retention) to show how qualitative and quantitative signals agree—or diverge.
 </Tip>
+
+<Callout>
+Need a numbers view? Bring these insights into [Metrics](/core-features/metrics) and the [Dashboard](/core-features/dashboard) so leadership can see qualitative and quantitative signal side by side.
+</Callout>
